--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blaues",
   "version": "0.0.0",
   "dependencies": {},
+  "private": "true",
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -20,13 +21,17 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
+    "grunt-karma": "^0.11.1",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
     "jshint-stylish": "^1.0.0",
+    "karma": "^0.12.36",
+    "karma-phantomjs-launcher": "^0.2.0",
     "load-grunt-tasks": "^3.1.0",
+    "phantomjs": "^1.9.17",
     "time-grunt": "^1.0.0"
   },
   "engines": {
