--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "blaues",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^3"
+  },
   "private": "true",
   "repository": {},
   "devDependencies": {
