--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "blaues",
   "version": "0.0.0",
   "dependencies": {
-    "express": "^3"
+    "express": "3",
+    "gzippo": "^0.2.0",
+    "morgan": "^1.6.0"
   },
   "private": "true",
   "repository": {},
